--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <script src="./js.js"></script>
+
 </body>
 </html>
