--- a/hw1/index.html
+++ b/hw1/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./index.js"></script> -->
-    <script src="./js.js"></script>
+    <script src="./index.js"></script>
+    <!-- <script src="./js.js"></script> -->
 
 </body>
 </html>
