--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./index.js"></script>
-    <!-- <script src="./js.js"></script> -->
+    
+    <script src="./hw1/index.js"></script>
+    <script src="./hw2/js.js"></script>
+
 
 </body>
 </html>
