--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <script src="./hw1/index.js"></script>
     <script src="./hw2/js.js"></script>
-
+    <script src="./hw3/index.js"></script>
 
 </body>
 </html>
