--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <script src="./hw1/index.js"></script>
     <script src="./hw2/js.js"></script>
     <script src="./hw3/index.js"></script>
+    <script src="./erkenur103.js"></script>
+
+<input type="number" id="rowsInput" placeholder="Rows">
+<input type="number" id="colsInput" placeholder="Columns">
+<button onclick="createTable()">Create Table</button>
+<table id="dynamicTable"></table>
+
+<div id="draggable" draggable="true" ondragstart="drag(event)">Drag me</div>
+<div id="droppable" ondrop="drop(event)" ondragover="allowDrop(event)">Drop here</div>
+
 
 </body>
 </html>
